Replaced deprecated functions and cleaned code Used Intellij clean code feature on java files only. Largely fixes deprecated use of the Integer and Boolean functions but also rewrites some logical statements for clarity