@@ -356,7 +356,7 @@ public class HTMLEditor extends JPanel {
 		 * null); } catch (Exception e) { e.printStackTrace();
 		 */
 		Element el = document.getParagraphElement(editor.getSelectionStart());
-		if (el.getName().toUpperCase().equals("P-IMPLIED"))
+		if (el.getName().equalsIgnoreCase("P-IMPLIED"))
 			el = el.getParentElement();
 		String elName = el.getName();
 		StringWriter sw = new StringWriter();
@@ -1206,7 +1206,7 @@ public class HTMLEditor extends JPanel {
 					.getAttributes();
 
 		if (charattrs
-			.containsAttribute(StyleConstants.Bold, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Bold, Boolean.TRUE)) {
 			boldActionB.setBorder(border2);
 			bold = true;
 		} else if (bold) {
@@ -1215,7 +1215,7 @@ public class HTMLEditor extends JPanel {
 		}
 		boldActionB.setBorderPainted(bold);
 		if (charattrs
-			.containsAttribute(StyleConstants.Italic, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Italic, Boolean.TRUE)) {
 			italicActionB.setBorder(border2);
 			italic = true;
 		} else if (italic) {
@@ -1224,7 +1224,7 @@ public class HTMLEditor extends JPanel {
 		}
 		italicActionB.setBorderPainted(italic);
 		if (charattrs
-			.containsAttribute(StyleConstants.Underline, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Underline, Boolean.TRUE)) {
 			underActionB.setBorder(border2);
 			under = true;
 		} else if (under) {
@@ -1375,9 +1375,9 @@ public class HTMLEditor extends JPanel {
 			String elName = elem.getName().toUpperCase();
 			String parentname = elem.getParentElement().getName();
 			HTML.Tag parentTag = HTML.getTag(parentname);
-			if (parentname.toUpperCase().equals("P-IMPLIED"))
+			if (parentname.equalsIgnoreCase("P-IMPLIED"))
 				parentTag = HTML.Tag.IMPLIED;
-			if (parentname.toLowerCase().equals("li")) {
+			if (parentname.equalsIgnoreCase("li")) {
 				// HTML.Tag listTag =
 				// HTML.getTag(elem.getParentElement().getParentElement().getName());
 				if (elem.getEndOffset() - elem.getStartOffset() > 1) {
@@ -1409,7 +1409,7 @@ public class HTMLEditor extends JPanel {
 					HTML.Tag listParentTag =
 						HTML.getTag(listParentElement.getName());
 					String listParentTagName = listParentTag.toString();
-					if (listParentTagName.toLowerCase().equals("li")) {
+					if (listParentTagName.equalsIgnoreCase("li")) {
 						Element listAncEl =
 							listParentElement.getParentElement();
 						try {
@@ -1507,7 +1507,7 @@ public class HTMLEditor extends JPanel {
 			 * editor.replaceSelection("\r"); return;
 			 */
 			HTML.Tag tag = HTML.getTag(elName);
-			if (elName.toUpperCase().equals("P-IMPLIED"))
+			if (elName.equalsIgnoreCase("P-IMPLIED"))
 				tag = HTML.Tag.IMPLIED;
 
 			HTMLEditorKit.InsertHTMLTextAction hta =
@@ -1538,7 +1538,7 @@ public class HTMLEditor extends JPanel {
 					.getParentElement()
 					.getParentElement();
 			for (int i = 0; i < tr.getElementCount(); i++)
-				if (tr.getElement(i).getName().toUpperCase().equals("TD"))
+				if (tr.getElement(i).getName().equalsIgnoreCase("TD"))
 					trTag += "<td><p></p></td>";
 			trTag += "</tr>";
 
@@ -1563,8 +1563,7 @@ public class HTMLEditor extends JPanel {
 				.getParagraphElement(editor.getCaretPosition())
 				.getParentElement()
 				.getName()
-				.toUpperCase()
-				.equals("TD");
+				.equalsIgnoreCase("TD");
 		}
 
 		public void update() {
@@ -1601,8 +1600,7 @@ public class HTMLEditor extends JPanel {
 				.getParagraphElement(editor.getCaretPosition())
 				.getParentElement()
 				.getName()
-				.toUpperCase()
-				.equals("TD");
+				.equalsIgnoreCase("TD");
 		}
 
 		public void update() {
@@ -1934,7 +1932,7 @@ public class HTMLEditor extends JPanel {
 		} catch (Exception ex) {
 			ex.printStackTrace();
 		}
-		dlg.chkNewWin.setSelected(target.toUpperCase().equals("_BLANK"));
+		dlg.chkNewWin.setSelected(target.equalsIgnoreCase("_BLANK"));
 		dlg.header.setText(Local.getString("Hyperlink properties"));
 		dlg.setTitle(Local.getString("Hyperlink properties"));
 		dlg.setVisible(true);
@@ -2113,8 +2111,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.COLSPAN))
 			try {
 				Integer i =
-					new Integer(
-						tda.getAttribute(HTML.Attribute.COLSPAN).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.COLSPAN).toString());
 				dlg.tdColspan.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2122,8 +2119,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.ROWSPAN))
 			try {
 				Integer i =
-					new Integer(
-						tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
+						Integer.valueOf(tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
 				dlg.tdRowspan.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2187,8 +2183,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLPADDING))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.CELLPADDING).toString());
+						Integer.valueOf(ta.getAttribute(HTML.Attribute.CELLPADDING).toString());
 				dlg.cellpadding.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2196,8 +2191,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLSPACING))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.CELLSPACING).toString());
+						Integer.valueOf(ta.getAttribute(HTML.Attribute.CELLSPACING).toString());
 				dlg.cellspacing.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2205,8 +2199,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.BORDER))
 			try {
 				Integer i =
-					new Integer(
-						ta.getAttribute(HTML.Attribute.BORDER).toString());
+						Integer.valueOf(ta.getAttribute(HTML.Attribute.BORDER).toString());
 				dlg.border.setValue(i);
 			} catch (Exception ex) {
 				ex.printStackTrace();
@@ -2411,7 +2404,7 @@ public class HTMLEditor extends JPanel {
 		}
 
 		Element el = document.getParagraphElement(editor.getCaretPosition());
-		if (el.getName().toUpperCase().equals("P-IMPLIED")) {
+		if (el.getName().equalsIgnoreCase("P-IMPLIED")) {
 			Element pEl = el.getParentElement();
 			String pElName = pEl.getName();
 			String newName = tag.toString();
@@ -2542,7 +2535,7 @@ public class HTMLEditor extends JPanel {
 			System.out.println(k + " = '" + attrs.getAttribute(k) + "'");
 		}
 
-		if (pEl.getParentElement().getName().toUpperCase().equals("TD")) {
+		if (pEl.getParentElement().getName().equalsIgnoreCase("TD")) {
 			setTableProperties(pEl.getParentElement());
 			return;
 		}
